fix scrollbar

--- a/index.css
+++ b/index.css
@@ -17,6 +17,8 @@ body {
     height: 779px;
     overflow: hidden;
     overflow-y: scroll;
+    scrollbar-width: none;  /* Firefox */
+    -ms-overflow-style: none;  /* IE and Edge */
 }
 
 /* Header */
